- Added DefaultNumDFiles as filesystem config option.
- Added num_dfiles tabfile option.  i
  The number of dfiles is set by searching for the first given hint in this
  order:  application hints, tabfile, server config.  The selected 
  distribution may modify the hint if neccesary.
- Phil Carns contributed general improvements and bug fixes for the dotconf
  parser.

pvfs2-1.1.0
===============
- network protocol: more 64-bit alignment fixes
- build: hide karma details in its module.mk
- build: remove duplicate commands used for QUIET_COMPILE
- build: fix test configure library detection
- build: simplify karma and vis some more
- build: add tests for features of Berkeley DB 4.3.xx
- trove: fix bugs introduced by new features of DB 4.3.xx
- docs: added doxygen configuration file and doxygen-style docs
  to many source files
- pvfs2-cp: can pass strip size as a parameter (thanks David Beilloin
  <dbeilloi@mc.com>)
- gossip: avoid double-timestamp in debug and error messages
- feature-test for kernel routines i_size_write, i_size_read, and parent_ino
- recover better from server failures
- kernel: export superblock magic number for romio autodetection
- 64-bit: change some protocol encodings to avoid unaligned accesses, fix
  server crash
- documentation updates
- Phil Carns and David Beilloin reported various memory leaks and memory
  misuse throughout the code
- Phil Carns and David Metheny contributed their improvment to the
  permissions-checking routines.  Secondary groups work much better now.
- configure-time options to select behavior needed on redhat-like environments
- can disable server support at configure time
- various tweaks to make cross compiling easier
- Phil Carns contributed a new config file option (LogStamp) to select
  timestamp format
- By default we sync metadata (TroveSyncMeta yes) and not data (TroveSyncData
  no).  This configuration is a good compromise between reliability and
  performance for most workloads.